--- a/.github/actions/test-deps/action.yml
+++ b/.github/actions/test-deps/action.yml
@@ -51,11 +51,14 @@ runs:
       if: ${{ runner.os == 'Windows' }}
       shell: powershell
       run: |
-        Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope CurrentUser
-        Invoke-RestMethod -Uri https://get.scoop.sh | Invoke-Expression
-        scoop bucket add extras
-        scoop install extras/retroarch
-        retroarch --version
+        Invoke-WebRequest -Uri https://buildbot.libretro.com/stable/1.16.0/windows/x86_64/RetroArch.7z -OutFile RetroArch.7z
+        7z x -o "$Env:ProgramFiles" RetroArch.7z
+        ls "$Env:ProgramFiles"
+        echo "$Env:ProgramFiles\RetroArch-Win64" >> "$GITHUB_PATH"
+
+    - name: Validate RetroArch Installation
+      shell: bash
+      run: retroarch --version
 
     - name: Download Test Files
       uses: actions/checkout@v3
