Add the compiler toolchain for the Windows test suite to pacify CMake

--- a/.github/actions/test-deps/action.yml
+++ b/.github/actions/test-deps/action.yml
@@ -45,7 +45,7 @@ runs:
       with:
         msystem: MINGW64
         update: true
-        install: git pkgconf mingw-w64-x86_64-cmake mingw-w64-x86_64-7zip
+        install: git pkgconf mingw-w64-x86_64-toolchain mingw-w64-x86_64-cmake
 
     - name: Install RetroArch (Windows)
       if: ${{ runner.os == 'Windows' }}
