Run the test job on Windows with `powershell`

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -153,6 +153,7 @@ jobs:
       archive-name: melondsds_libretro-linux-x86_64
       target: linux-x86_64
       runs-on: ubuntu-latest
+      shell: powershell
     secrets:
       TESTFILE_REPO_TOKEN: ${{ secrets.TESTFILE_REPO_TOKEN }}
       TESTFILE_REPO: ${{ secrets.TESTFILE_REPO }}
