Try Adding RetroArch to the path differently

--- a/.github/actions/test-deps/action.yml
+++ b/.github/actions/test-deps/action.yml
@@ -53,8 +53,12 @@ runs:
       run: |
         Invoke-WebRequest -Uri https://buildbot.libretro.com/stable/1.16.0/windows/x86_64/RetroArch.7z -OutFile RetroArch.7z
         7z x -o"$Env:ProgramFiles" RetroArch.7z
-        ls "$Env:ProgramFiles"
-        echo "$Env:ProgramFiles\RetroArch-Win64" >> "$GITHUB_PATH"
+        ls "$Env:ProgramFiles\RetroArch-Win64"
+
+    - name: Add RetroArch to PATH (Windows)
+      if: ${{ runner.os == 'Windows' }}
+      shell: bash
+      run: echo "$PROGRAMFILES\RetroArch-Win64" >> "$GITHUB_PATH"
 
     - name: Download Test Files
       uses: actions/checkout@v3
