--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ libretro-build-linux-x64:
     - .core-defs
   image: $CI_SERVER_HOST:5050/libretro-infrastructure/libretro-build-amd64-ubuntu:latest
   before_script:
-    - sudo add-apt-repository ppa:ecal/cmake-3.25 -y
+    - echo 'deb https://ppa.launchpadcontent.net/savoury1/build-tools/ubuntu bionic main' | sudo tee -a /etc/apt/sources.list.d/savoury1.list >/dev/null
     - sudo apt-get update -qy
     - sudo apt-get dist-upgrade -qy
   # This container has CMake 3.10, which is way too old
