--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,11 +104,11 @@ android-arm64-v8a:
     - .libretro-android-cmake-arm64-v8a
     - .core-defs
   before_script:
-    - sudo apt-get update -qy
-    - sudo apt-get install -qy software-properties-common
-    - sudo add-apt-repository -y ppa:savoury1/build-tools
-    - sudo apt-get update -qy
-    - sudo apt-get install -qy cmake
+    - apt-get update -qy
+    - apt-get install -qy software-properties-common
+    - add-apt-repository -y ppa:savoury1/build-tools
+    - apt-get update -qy
+    - apt-get install -qy cmake
 
 # Android 64-bit x86
 android-x86_64:
@@ -116,11 +116,11 @@ android-x86_64:
     - .libretro-android-cmake-x86_64
     - .core-defs
   before_script:
-    - sudo apt-get update -qy
-    - sudo apt-get install -qy software-properties-common
-    - sudo add-apt-repository -y ppa:savoury1/build-tools
-    - sudo apt-get update -qy
-    - sudo apt-get install -qy cmake
+    - apt-get update -qy
+    - apt-get install -qy software-properties-common
+    - add-apt-repository -y ppa:savoury1/build-tools
+    - apt-get update -qy
+    - apt-get install -qy cmake
 # Not supported; if this doesn't work the first time around, I'm cutting it
 
 # iOS
