--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -104,11 +104,10 @@ android-arm64-v8a:
     - .libretro-android-cmake-arm64-v8a
     - .core-defs
   before_script:
+    - echo "deb http://deb.debian.org/debian bullseye-backports main" | tee -a /etc/apt/sources.libretro.list
     - apt-get update -qy
-    - apt-get install -qy software-properties-common
-    - add-apt-repository -y ppa:savoury1/build-tools
-    - apt-get update -qy
-    - apt-get install -qy cmake
+    - apt-get install -qy cmake/bullseye-backports
+  # The Android runners are based on Debian, not Ubuntu
 
 # Android 64-bit x86
 android-x86_64:
@@ -116,11 +115,9 @@ android-x86_64:
     - .libretro-android-cmake-x86_64
     - .core-defs
   before_script:
+    - echo "deb http://deb.debian.org/debian bullseye-backports main" | tee -a /etc/apt/sources.libretro.list
     - apt-get update -qy
-    - apt-get install -qy software-properties-common
-    - add-apt-repository -y ppa:savoury1/build-tools
-    - apt-get update -qy
-    - apt-get install -qy cmake
+    - apt-get install -qy cmake/bullseye-backports
 # Not supported; if this doesn't work the first time around, I'm cutting it
 
 # iOS
