--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,6 +107,8 @@ android-arm64-v8a:
     - echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list
     - apt-get update -qy
     - apt-get install -qy cmake/bullseye-backports
+  variables:
+    CXXFLAGS: -Wno-deprecated-declarations # Deprecation warnings aren't helpful on the libretro Gitlab
   # The Android runners are based on Debian, not Ubuntu
 
 # Android 64-bit x86
@@ -118,6 +120,8 @@ android-x86_64:
     - echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list
     - apt-get update -qy
     - apt-get install -qy cmake/bullseye-backports
+  variables:
+    CXXFLAGS: -Wno-deprecated-declarations # Deprecation warnings aren't helpful on the libretro Gitlab
 # Not supported; if this doesn't work the first time around, I'm cutting it
 
 # iOS
