Don't run the GitHub workflows when the GitLab one changes
- Ditto for `.gitignore`

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "*.gitlab-ci.yml"
+      - "*.gitignore"
   pull_request:
     branches:
       - main
