Set a build target for iOS and tvOS on the GitLab builds

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,9 +129,13 @@ libretro-build-ios-arm64:
   extends:
     - .libretro-ios-cmake-arm64
     - .core-defs
+  variables:
+    MACOSX_DEPLOYMENT_TARGET: "13"
 
 # tvOS
 libretro-build-tvos-arm64:
   extends:
     - .libretro-tvos-cmake-arm64
     - .core-defs
+  variables:
+    MACOSX_DEPLOYMENT_TARGET: "13"
