--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,7 @@ libretro-build-ios-arm64:
   variables:
     CORE_ARGS: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=OS64 -DDEPLOYMENT_TARGET=13
     IOS_MINVER: "13.0"
+    CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
 
 # tvOS
 libretro-build-tvos-arm64:
@@ -141,3 +142,4 @@ libretro-build-tvos-arm64:
   variables:
     CORE_ARGS: --toolchain ./cmake/toolchain/ios.toolchain.cmake -DPLATFORM=TVOS -DDEPLOYMENT_TARGET=13
     IOS_MINVER: "13.0"
+    CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
