--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,6 +109,7 @@ android-arm64-v8a:
     - apt-get install -qy cmake/bullseye-backports
   variables:
     CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
+    API_LEVEL: 24
   # The Android runners are based on Debian, not Ubuntu
 
 # Android 64-bit x86
@@ -122,6 +123,7 @@ android-x86_64:
     - apt-get install -qy cmake/bullseye-backports
   variables:
     CXXFLAGS: -Wno-deprecated-declarations -Wno-unknown-attributes
+    API_LEVEL: 24
 # Not supported; if this doesn't work the first time around, I'm cutting it
 
 # iOS
