--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -197,7 +197,11 @@ if (ENABLE_JIT)
 endif ()
 
 # libretro cores do not start with "lib"
-set_target_properties(melondsds_libretro PROPERTIES PREFIX "" OUTPUT_NAME "melondsds_libretro")
+set_target_properties(melondsds_libretro PROPERTIES PREFIX "")
+if(ANDROID)
+    set_target_properties(melondsds_libretro PROPERTIES SUFFIX "_android.so")
+endif()
+
 
 # Some platforms or compilers don't use the expected suffixes for shared libraries
 if (APPLE)
