--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -96,6 +96,7 @@ jobs:
     with:
       lib-ext: so
       target: android
+      core-name: melondsds_libretro_android
       archive-name: melondsds_libretro-android
       cmake-args: -DENABLE_OGLRENDERER=OFF -DANDROID_ABI=arm64-v8a -DANDROID_PLATFORM=24 -DCMAKE_TOOLCHAIN_FILE="$ANDROID_NDK/build/cmake/android.toolchain.cmake" $EXTRA_CMAKE_ARGS
       runs-on: ubuntu-latest
