--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -107,7 +107,7 @@ jobs:
         run: |
           mkdir -vp "$CORES_PATH" "$INFO_PATH"
           cp -f "${{ env.BUILD_DIR }}/src/libretro/${{ inputs.core-name }}.${{ inputs.lib-ext }}" "$CORES_PATH"
-          cp -f "${{ env.BUILD_DIR }}/${{ inputs.core-name }}.info" "$INFO_PATH/${{ inputs.core-name }}.info"
+          cp -f "${{ env.BUILD_DIR }}/melondsds_libretro.info" "$INFO_PATH/${{ inputs.core-name }}.info"
           cp -f "${{ env.BUILD_DIR }}/melondsds-LICENSE.txt" "$CORES_PATH"
 
       - name: Upload Artifact
