--- a/melondsds_libretro.info.in
+++ b/melondsds_libretro.info.in
@@ -1,9 +1,10 @@
 # Software Information
-display_name = "Nintendo - DS (${CMAKE_PROJECT_NAME})"
-display_version = "${CMAKE_PROJECT_VERSION}"
-authors = "Jesse Talavera-Greenberg|The melonDS Team"
+display_name = "Nintendo - DS (${MELONDSDS_NAME})"
+display_version = "${MELONDSDS_VERSION}"
+description = "${CMAKE_PROJECT_DESCRIPTION} Based on melonDS commit ${MELONDS_REPOSITORY_TAG}."
+authors = "Jesse Talavera|The melonDS Team"
 categories = "Emulator"
-corename = "${CMAKE_PROJECT_NAME}"
+corename = "${MELONDSDS_NAME}"
 license = "GPLv3+"
 permissions = "dynarec_optional|microphone_optional"
 supported_extensions = "nds|ids|dsi"
@@ -54,5 +55,3 @@ firmware6_desc = "dsi_nand.bin (DSi NAND)"
 firmware6_path = "dsi_nand.bin"
 firmware6_opt = "true"
 notes = "(!) bios7.bin (md5): df692a80a5b1bc90728bc3dfc76cd948|(!) bios9.bin (md5): a392174eb3e572fed6447e956bde4b25"
-
-description = "${CMAKE_PROJECT_DESCRIPTION}"
