--- a/melondsds_libretro.info.in
+++ b/melondsds_libretro.info.in
@@ -21,7 +21,7 @@ core_options_version = "2.0"
 database = "Nintendo - Nintendo DS|Nintendo - Nintendo DS (Download Play)|Nintendo - Nintendo DSi|Nintendo - Nintendo DSi Decrypted|Nintendo - Nintendo DSi (Digital)"
 hw_render = "true"
 input_descriptors = "true"
-is_experimental = "true"
+is_experimental = "false"
 libretro_saves = "true"
 load_subsystem = "true"
 needs_fullpath = "false"
