--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -156,6 +156,7 @@ jobs:
     name: Test Suite (Linux x86_64)
     uses: ./.github/workflows/test.yaml
     needs: [ linux-x86_64 ]
+    if: github.event_name == 'push'
     with:
       archive-name: melondsds_libretro-linux-x86_64
       target: linux-x86_64
