--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,12 +5,13 @@ on:
   push:
     branches:
       - main
+      - dev
     paths-ignore:
       - "*.gitlab-ci.yml"
       - "*.gitignore"
   pull_request:
     branches:
-      - main
+      - dev
     paths-ignore:
       - "**.md"
       - ".gitignore"
