Prepare to consolidate strings

--- a/src/libretro/CMakeLists.txt
+++ b/src/libretro/CMakeLists.txt
@@ -81,6 +81,7 @@ add_library(melondsds_libretro MODULE
     std/chrono.hpp
     std/semaphore.hpp
     std/span.hpp
+    strings/en_us.hpp
     sram.cpp
     sram.hpp
     tracy.hpp
