--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ set(ENABLE_OGLRENDERER ${ENABLE_OPENGL})
 set(OPENGL_PROFILE ${DEFAULT_OPENGL_PROFILE} CACHE STRING "OpenGL profile to use if OpenGL is enabled. Valid values are 'OpenGL', 'OpenGLES2', 'OpenGLES3', 'OpenGLES31', and 'OpenGLES32'.")
 set_property(CACHE OPENGL_PROFILE PROPERTY STRINGS OpenGL OpenGLES2 OpenGLES3)
 
+if (NOT OPENGL_PROFILE STREQUAL "OpenGL")
+    message(WARNING "melonDS does not support OpenGL ES yet")
+endif()
+
 if (ANDROID)
     if (NOT ANDROID_PLATFORM)
         set(ANDROID_PLATFORM "android-24")
