--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,7 @@ libretro-build-linux-x64:
     - .core-defs
   image: $CI_SERVER_HOST:5050/libretro-infrastructure/libretro-build-amd64-ubuntu:latest
   before_script:
+    - export NUMPROC=$(($(nproc)/5))
     - sudo apt-get update -qy
     - sudo apt-get install -qy software-properties-common
     - sudo add-apt-repository -y ppa:savoury1/build-tools
@@ -104,6 +105,7 @@ android-arm64-v8a:
     - .libretro-android-cmake-arm64-v8a
     - .core-defs
   before_script:
+    - export NUMPROC=$(($(nproc)/5))
     - echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list
     - apt-get update -qy
     - apt-get install -qy cmake/bullseye-backports
@@ -118,6 +120,7 @@ android-x86_64:
     - .libretro-android-cmake-x86_64
     - .core-defs
   before_script:
+    - export NUMPROC=$(($(nproc)/5))
     - echo "deb http://deb.debian.org/debian bullseye-backports main" >> /etc/apt/sources.list
     - apt-get update -qy
     - apt-get install -qy cmake/bullseye-backports
